--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "dotenv": "^2.0.0",
-    "html-pdf": "^2.1.0",
     "jsonlint": "^1.6.2",
     "jsonresume-theme-crisp": "^0.2.12",
     "jsonresume-theme-flat": "^0.3.7",
@@ -31,6 +30,7 @@
     "jspdf": "^1.3.2",
     "node-static": "~0.7.7",
     "open": "0.0.5",
+    "puppeteer": "^0.10.2",
     "read": "~1.0.7",
     "resume-schema": "latest",
     "resume-to-html": "latest",
